--- a/examples/test_psr.ipynb
+++ b/examples/test_psr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -39,170 +39,53 @@
       "----------------------------------------------------------\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.36 s\n",
-      "\tCPU time Spent:  0.36 s\n",
+      "\tReal time Spent: 0.12 s\n",
+      "\tCPU time Spent:  0.12 s\n",
       "\tGeneration: 0\n",
-      "\tBest fitness: 0.5392156862745099\n",
+      "\tBest fitness: 0.6666666666666667\n",
       "\tEvaluations of fitness: 100\n",
-      "\tdiversity: 29.9\n",
-      "\tmean speed: 0.509\n",
+      "\tdiversity: 29.7\n",
+      "\tmean speed: 0.469\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.68 s\n",
-      "\tCPU time Spent:  0.68 s\n",
-      "\tGeneration: 1\n",
-      "\tBest fitness: 0.7058823529411764\n",
-      "\tEvaluations of fitness: 200\n",
-      "\tdiversity: 40.7\n",
-      "\tmean speed: -23.4\n",
+      "\tReal time Spent: 0.6 s\n",
+      "\tCPU time Spent:  0.6 s\n",
+      "\tGeneration: 4\n",
+      "\tBest fitness: 0.9693877551020409\n",
+      "\tEvaluations of fitness: 500\n",
+      "\tdiversity: 20.9\n",
+      "\tmean speed: 8.85\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 1.37 s\n",
-      "\tCPU time Spent:  1.37 s\n",
-      "\tGeneration: 3\n",
-      "\tBest fitness: 0.7058823529411764\n",
-      "\tEvaluations of fitness: 400\n",
-      "\tdiversity: 51.1\n",
-      "\tmean speed: -26.1\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 2.06 s\n",
-      "\tCPU time Spent:  2.06 s\n",
-      "\tGeneration: 5\n",
-      "\tBest fitness: 0.7254901960784313\n",
-      "\tEvaluations of fitness: 600\n",
-      "\tdiversity: 45.6\n",
-      "\tmean speed: -11.3\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 2.72 s\n",
-      "\tCPU time Spent:  2.72 s\n",
-      "\tGeneration: 7\n",
-      "\tBest fitness: 0.7647058823529411\n",
-      "\tEvaluations of fitness: 800\n",
-      "\tdiversity: 52.0\n",
-      "\tmean speed: -2.57\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 3.37 s\n",
-      "\tCPU time Spent:  3.37 s\n",
-      "\tGeneration: 9\n",
-      "\tBest fitness: 0.7647058823529411\n",
-      "\tEvaluations of fitness: 1000\n",
-      "\tdiversity: 50.1\n",
-      "\tmean speed: -4.61\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 4.03 s\n",
-      "\tCPU time Spent:  4.03 s\n",
-      "\tGeneration: 11\n",
-      "\tBest fitness: 0.7843137254901961\n",
-      "\tEvaluations of fitness: 1200\n",
-      "\tdiversity: 49.7\n",
-      "\tmean speed: -1.04\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 4.71 s\n",
-      "\tCPU time Spent:  4.71 s\n",
-      "\tGeneration: 13\n",
-      "\tBest fitness: 0.8627450980392157\n",
-      "\tEvaluations of fitness: 1400\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: -0.862\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 5.35 s\n",
-      "\tCPU time Spent:  5.35 s\n",
-      "\tGeneration: 15\n",
-      "\tBest fitness: 0.8627450980392157\n",
-      "\tEvaluations of fitness: 1600\n",
-      "\tdiversity: 49.4\n",
-      "\tmean speed: -0.429\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 6.12 s\n",
-      "\tCPU time Spent:  6.12 s\n",
-      "\tGeneration: 17\n",
+      "\tReal time Spent: 1.13 s\n",
+      "\tCPU time Spent:  1.13 s\n",
+      "\tGeneration: 8\n",
       "\tBest fitness: 0.9705882352941176\n",
-      "\tEvaluations of fitness: 1800\n",
-      "\tdiversity: 50.4\n",
-      "\tmean speed: -0.149\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 6.78 s\n",
-      "\tCPU time Spent:  6.78 s\n",
-      "\tGeneration: 19\n",
-      "\tBest fitness: 0.9705882352941176\n",
-      "\tEvaluations of fitness: 2000\n",
-      "\tdiversity: 50.1\n",
-      "\tmean speed: -0.186\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 7.47 s\n",
-      "\tCPU time Spent:  7.47 s\n",
-      "\tGeneration: 21\n",
-      "\tBest fitness: 0.9803921568627452\n",
-      "\tEvaluations of fitness: 2200\n",
-      "\tdiversity: 49.8\n",
-      "\tmean speed: -0.00892\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 8.14 s\n",
-      "\tCPU time Spent:  8.14 s\n",
-      "\tGeneration: 23\n",
-      "\tBest fitness: 0.9803921568627452\n",
-      "\tEvaluations of fitness: 2400\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: -0.00725\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 8.82 s\n",
-      "\tCPU time Spent:  8.82 s\n",
-      "\tGeneration: 25\n",
-      "\tBest fitness: 0.9803921568627452\n",
-      "\tEvaluations of fitness: 2600\n",
-      "\tdiversity: 50.4\n",
-      "\tmean speed: 0.0341\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 9.5 s\n",
-      "\tCPU time Spent:  9.5 s\n",
-      "\tGeneration: 27\n",
-      "\tBest fitness: 0.9803921568627452\n",
-      "\tEvaluations of fitness: 2800\n",
-      "\tdiversity: 50.0\n",
-      "\tmean speed: -0.133\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 10.17 s\n",
-      "\tCPU time Spent:  10.17 s\n",
-      "\tGeneration: 29\n",
-      "\tBest fitness: 1.0\n",
-      "\tEvaluations of fitness: 3000\n",
-      "\tdiversity: 50.0\n",
-      "\tmean speed: 0.118\n",
+      "\tEvaluations of fitness: 900\n",
+      "\tdiversity: 18.3\n",
+      "\tmean speed: -9.14\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "model = ExplicitPSClassifier(\"p_0 * x_0**2 + p_1\")\n",
+    "model = ExplicitPSClassifier(\"p_0 * x_0 + p_1\")\n",
     "\n",
     "model = model.fit(X_train, y_train_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7491638795986622"
+       "1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -228,269 +111,98 @@
       "----------------------------------------------------------\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.26 s\n",
-      "\tCPU time Spent:  0.26 s\n",
+      "\tReal time Spent: 0.09 s\n",
+      "\tCPU time Spent:  0.09 s\n",
       "\tGeneration: 0\n",
-      "\tBest fitness: -6.062433363336334\n",
+      "\tBest fitness: 0.9920224422442244\n",
       "\tEvaluations of fitness: 100\n",
-      "\tdiversity: 32.9\n",
-      "\tmean speed: 0.502\n",
+      "\tdiversity: 35.6\n",
+      "\tmean speed: 0.505\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.52 s\n",
-      "\tCPU time Spent:  0.52 s\n",
-      "\tGeneration: 1\n",
-      "\tBest fitness: 0.1070534653465347\n",
-      "\tEvaluations of fitness: 200\n",
-      "\tdiversity: 28.6\n",
-      "\tmean speed: -20.6\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 1.15 s\n",
-      "\tCPU time Spent:  1.15 s\n",
-      "\tGeneration: 3\n",
-      "\tBest fitness: 0.1070534653465347\n",
-      "\tEvaluations of fitness: 400\n",
-      "\tdiversity: 46.2\n",
-      "\tmean speed: -12.7\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 1.68 s\n",
-      "\tCPU time Spent:  1.68 s\n",
+      "\tReal time Spent: 0.53 s\n",
+      "\tCPU time Spent:  0.53 s\n",
       "\tGeneration: 5\n",
-      "\tBest fitness: 0.1070534653465347\n",
+      "\tBest fitness: 0.99518199819982\n",
       "\tEvaluations of fitness: 600\n",
-      "\tdiversity: 38.9\n",
-      "\tmean speed: 4.99\n",
+      "\tdiversity: 17.7\n",
+      "\tmean speed: -10.3\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 2.22 s\n",
-      "\tCPU time Spent:  2.22 s\n",
-      "\tGeneration: 7\n",
-      "\tBest fitness: 0.49724968496849686\n",
-      "\tEvaluations of fitness: 800\n",
-      "\tdiversity: 32.0\n",
-      "\tmean speed: 0.931\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 2.76 s\n",
-      "\tCPU time Spent:  2.76 s\n",
-      "\tGeneration: 9\n",
-      "\tBest fitness: 0.6307491149114912\n",
-      "\tEvaluations of fitness: 1000\n",
-      "\tdiversity: 18.3\n",
-      "\tmean speed: 8.54\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 3.28 s\n",
-      "\tCPU time Spent:  3.28 s\n",
+      "\tReal time Spent: 1.11 s\n",
+      "\tCPU time Spent:  1.11 s\n",
       "\tGeneration: 11\n",
-      "\tBest fitness: 0.6318759075907591\n",
+      "\tBest fitness: 0.999980798079808\n",
       "\tEvaluations of fitness: 1200\n",
-      "\tdiversity: 17.9\n",
-      "\tmean speed: -2.19\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 3.8 s\n",
-      "\tCPU time Spent:  3.8 s\n",
-      "\tGeneration: 13\n",
-      "\tBest fitness: 0.6318759075907591\n",
-      "\tEvaluations of fitness: 1400\n",
-      "\tdiversity: 26.7\n",
-      "\tmean speed: -4.5\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 4.31 s\n",
-      "\tCPU time Spent:  4.31 s\n",
-      "\tGeneration: 15\n",
-      "\tBest fitness: 0.6439120312031203\n",
-      "\tEvaluations of fitness: 1600\n",
-      "\tdiversity: 23.7\n",
-      "\tmean speed: 2.75\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 4.83 s\n",
-      "\tCPU time Spent:  4.83 s\n",
-      "\tGeneration: 17\n",
-      "\tBest fitness: 0.6439120312031203\n",
-      "\tEvaluations of fitness: 1800\n",
-      "\tdiversity: 21.8\n",
-      "\tmean speed: -0.131\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 5.45 s\n",
-      "\tCPU time Spent:  5.45 s\n",
-      "\tGeneration: 19\n",
-      "\tBest fitness: 0.6541808580858086\n",
-      "\tEvaluations of fitness: 2000\n",
-      "\tdiversity: 21.7\n",
-      "\tmean speed: -0.019\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 6.0 s\n",
-      "\tCPU time Spent:  6.0 s\n",
-      "\tGeneration: 21\n",
-      "\tBest fitness: 0.6824945694569458\n",
-      "\tEvaluations of fitness: 2200\n",
-      "\tdiversity: 14.9\n",
-      "\tmean speed: 5.65\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 6.55 s\n",
-      "\tCPU time Spent:  6.55 s\n",
-      "\tGeneration: 23\n",
-      "\tBest fitness: 0.723739693969397\n",
-      "\tEvaluations of fitness: 2400\n",
       "\tdiversity: 10.9\n",
-      "\tmean speed: 1.42\n",
+      "\tmean speed: 4.39\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 7.07 s\n",
-      "\tCPU time Spent:  7.07 s\n",
-      "\tGeneration: 25\n",
-      "\tBest fitness: 0.7382937893789379\n",
-      "\tEvaluations of fitness: 2600\n",
-      "\tdiversity: 4.42\n",
-      "\tmean speed: 4.2\n",
+      "\tReal time Spent: 1.63 s\n",
+      "\tCPU time Spent:  1.63 s\n",
+      "\tGeneration: 17\n",
+      "\tBest fitness: 0.999980798079808\n",
+      "\tEvaluations of fitness: 1800\n",
+      "\tdiversity: 8.34\n",
+      "\tmean speed: 1.33\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 7.58 s\n",
-      "\tCPU time Spent:  7.58 s\n",
-      "\tGeneration: 27\n",
-      "\tBest fitness: 0.7812798079807981\n",
-      "\tEvaluations of fitness: 2800\n",
-      "\tdiversity: 5.62\n",
-      "\tmean speed: 5.68\n",
+      "\tReal time Spent: 2.16 s\n",
+      "\tCPU time Spent:  2.16 s\n",
+      "\tGeneration: 23\n",
+      "\tBest fitness: 0.9999944794479448\n",
+      "\tEvaluations of fitness: 2400\n",
+      "\tdiversity: 6.56\n",
+      "\tmean speed: -0.183\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 8.31 s\n",
-      "\tCPU time Spent:  8.31 s\n",
-      "\tGeneration: 30\n",
-      "\tBest fitness: 0.8408062406240624\n",
-      "\tEvaluations of fitness: 3100\n",
-      "\tdiversity: 22.1\n",
-      "\tmean speed: 5.85\n",
+      "\tReal time Spent: 2.74 s\n",
+      "\tCPU time Spent:  2.74 s\n",
+      "\tGeneration: 29\n",
+      "\tBest fitness: 0.9999998799879988\n",
+      "\tEvaluations of fitness: 3000\n",
+      "\tdiversity: 5.98\n",
+      "\tmean speed: 0.737\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 9.04 s\n",
-      "\tCPU time Spent:  9.04 s\n",
-      "\tGeneration: 33\n",
-      "\tBest fitness: 0.8846643864386439\n",
-      "\tEvaluations of fitness: 3400\n",
-      "\tdiversity: 44.2\n",
-      "\tmean speed: 8.04\n",
+      "\tReal time Spent: 3.27 s\n",
+      "\tCPU time Spent:  3.27 s\n",
+      "\tGeneration: 35\n",
+      "\tBest fitness: 0.9999998799879988\n",
+      "\tEvaluations of fitness: 3600\n",
+      "\tdiversity: 5.63\n",
+      "\tmean speed: 0.296\n",
       "\n",
       "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 9.84 s\n",
-      "\tCPU time Spent:  9.84 s\n",
-      "\tGeneration: 36\n",
-      "\tBest fitness: 0.8994265826582658\n",
-      "\tEvaluations of fitness: 3700\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 3.22\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 10.55 s\n",
-      "\tCPU time Spent:  10.55 s\n",
-      "\tGeneration: 39\n",
-      "\tBest fitness: 0.8994727872787278\n",
-      "\tEvaluations of fitness: 4000\n",
-      "\tdiversity: 50.1\n",
-      "\tmean speed: 1.16\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 11.26 s\n",
-      "\tCPU time Spent:  11.26 s\n",
-      "\tGeneration: 42\n",
-      "\tBest fitness: 0.8994727872787278\n",
-      "\tEvaluations of fitness: 4300\n",
-      "\tdiversity: 49.8\n",
-      "\tmean speed: 0.355\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 11.97 s\n",
-      "\tCPU time Spent:  11.97 s\n",
-      "\tGeneration: 45\n",
-      "\tBest fitness: 0.8995085508550855\n",
-      "\tEvaluations of fitness: 4600\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.211\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 12.68 s\n",
-      "\tCPU time Spent:  12.68 s\n",
-      "\tGeneration: 48\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 4900\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.00604\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 13.38 s\n",
-      "\tCPU time Spent:  13.38 s\n",
-      "\tGeneration: 51\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 5200\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.0205\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 14.1 s\n",
-      "\tCPU time Spent:  14.1 s\n",
-      "\tGeneration: 54\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 5500\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.0219\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 14.68 s\n",
-      "\tCPU time Spent:  14.68 s\n",
-      "\tGeneration: 56\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 5700\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.00061\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 15.4 s\n",
-      "\tCPU time Spent:  15.4 s\n",
-      "\tGeneration: 59\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 6000\n",
-      "\tdiversity: 50.0\n",
-      "\tmean speed: -0.000713\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 16.12 s\n",
-      "\tCPU time Spent:  16.12 s\n",
-      "\tGeneration: 62\n",
-      "\tBest fitness: 0.8995453945394539\n",
-      "\tEvaluations of fitness: 6300\n",
-      "\tdiversity: 49.9\n",
-      "\tmean speed: 0.00262\n",
+      "\tReal time Spent: 3.84 s\n",
+      "\tCPU time Spent:  3.84 s\n",
+      "\tGeneration: 41\n",
+      "\tBest fitness: 0.9999998799879988\n",
+      "\tEvaluations of fitness: 4200\n",
+      "\tdiversity: 5.7\n",
+      "\tmean speed: 0.0975\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "model = ExplicitPSRegressor(\"p_0 * x_0**2 + p_1\")\n",
+    "model = ExplicitPSRegressor(\"p_0 * x_0 + p_1\")\n",
     "\n",
     "model = model.fit(X_train, y_train_r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.256407291706473"
+       "0.999999492022876"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
