--- a/examples/test_psr.ipynb
+++ b/examples/test_psr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,43 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing optimization of Symbolic regression using PSO\n",
-      "----------------------------------------------------------\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.12 s\n",
-      "\tCPU time Spent:  0.12 s\n",
-      "\tGeneration: 0\n",
-      "\tBest fitness: 0.6666666666666667\n",
-      "\tEvaluations of fitness: 100\n",
-      "\tdiversity: 29.7\n",
-      "\tmean speed: 0.469\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 0.6 s\n",
-      "\tCPU time Spent:  0.6 s\n",
-      "\tGeneration: 4\n",
-      "\tBest fitness: 0.9693877551020409\n",
-      "\tEvaluations of fitness: 500\n",
-      "\tdiversity: 20.9\n",
-      "\tmean speed: 8.85\n",
-      "\n",
-      "Optimizing Symbolic regression using PSO:\n",
-      "\tReal time Spent: 1.13 s\n",
-      "\tCPU time Spent:  1.13 s\n",
-      "\tGeneration: 8\n",
-      "\tBest fitness: 0.9705882352941176\n",
-      "\tEvaluations of fitness: 900\n",
-      "\tdiversity: 18.3\n",
-      "\tmean speed: -9.14\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'ParametricSymbolicClassificationObj' object has no attribute 'vecsize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mExplicitPSClassifier\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mp_0 * x_0 + p_1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m model \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train_c)\n",
+      "File \u001b[0;32m~/Documentos/invAI/evolml/src/evolml/models/symbolic_regression/explicit_psm.py:48\u001b[0m, in \u001b[0;36mExplicitPSClassifier.__init__\u001b[0;34m(self, expression, params)\u001b[0m\n\u001b[1;32m     35\u001b[0m     params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     36\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstop_cond\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime_limit or convergence or fit_target\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     37\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime_limit\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m60.0\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mv_timer\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.5\u001b[39m,\n\u001b[1;32m     45\u001b[0m     }\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobjfunc \u001b[38;5;241m=\u001b[39m ParametricSymbolicClassificationObj(expression)\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minitializer \u001b[38;5;241m=\u001b[39m initializers\u001b[38;5;241m.\u001b[39mUniformVectorInitializer(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobjfunc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvecsize\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobjfunc\u001b[38;5;241m.\u001b[39mlow_lim, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobjfunc\u001b[38;5;241m.\u001b[39mup_lim, pop_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_strat \u001b[38;5;241m=\u001b[39m strategies\u001b[38;5;241m.\u001b[39mPSO(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minitializer, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.7\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc1\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1.5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc2\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1.5\u001b[39m})\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptim_algorithm \u001b[38;5;241m=\u001b[39m algorithms\u001b[38;5;241m.\u001b[39mGeneralAlgorithm(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobjfunc, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_strat, params\u001b[38;5;241m=\u001b[39mparams)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ParametricSymbolicClassificationObj' object has no attribute 'vecsize'"
      ]
     }
    ],
@@ -76,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
